--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ figure {
   height: 100%;
 }
 #fixed {
-  background-image: url('img/mac.png');
+  background-image: url('img/images.jpg');
   position: fixed;
   display: block;
   top: 0;
