--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@ html, body {
 .carousel-caption h1 {
   font-size: 500%;
   text-transform: uppercase;
-  text-shadow: 1px 1px 15px #000;
+  color: #222;
 }
 
 .carousel-caption h3 {
   font-size: 200%;
   font-weight: 500;
-  text-shadow: 1px 1px 10px #000;
+  color: #222;
   padding-bottom: 1rem;
 }
 
